@@ -1,27 +1,27 @@
-package com.github.zgraund.mythicritual.recipes;
+package com.github.zgraund.mythicritual.recipe;
 
-import com.github.zgraund.mythicritual.recipes.ingredients.RitualRecipeOffering;
-import com.github.zgraund.mythicritual.util.EntityConsumer;
+import com.github.zgraund.mythicritual.component.ModDataComponents;
+import com.github.zgraund.mythicritual.item.ModItems;
 import com.github.zgraund.mythicritual.util.RotationUtils;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.Vec3i;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.item.ItemEntity;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.RecipeInput;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.AABB;
-import org.checkerframework.checker.nullness.qual.NonNull;
-import org.jetbrains.annotations.NotNull;
 
 import javax.annotation.Nonnull;
 import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
-public final class RitualRecipeContext implements RecipeInput {
-    private final HashMap<BlockPos, List<EntityConsumer>> validatedInput = new HashMap<>();
+public class RitualRecipeContext implements RecipeInput {
+    private final HashMap<Vec3i, List<RitualRecipe.OfferingHolder>> entitiesFound = new HashMap<>();
     private final BlockState altar;
     private final BlockPos origin;
     private final ItemStack catalyst;
@@ -38,29 +38,36 @@ public final class RitualRecipeContext implements RecipeInput {
         this.hand = hand;
     }
 
-    @NonNull
-    public HashMap<BlockPos, List<EntityConsumer>> entitiesByPosition(@NotNull List<RitualRecipeOffering> ingredients) {
-        HashMap<BlockPos, List<EntityConsumer>> out = new HashMap<>();
-        for (RitualRecipeOffering ingredient : ingredients) {
-            BlockPos target = RotationUtils.relativeTo(origin, ingredient.offset(), player.getDirection());
-            if (out.containsKey(target)) continue;
-            out.put(target, level.getEntities(null, new AABB(target)).stream().map(e -> new EntityConsumer(e, 0)).collect(Collectors.toList()));
+    public HashMap<Vec3i, List<RitualRecipe.OfferingHolder>> itemsByOffset(@Nonnull Set<Vec3i> offsets) {
+        for (Vec3i offset : offsets) {
+            BlockPos target = RotationUtils.relativeTo(origin, offset, player.getDirection());
+            entitiesFound.put(offset,
+                    level.getEntities(null, new AABB(target))
+                         .stream()
+                         .map(entity -> {
+                                     if (entity instanceof ItemEntity item) return new RitualRecipe.OfferingHolder(entity, item.getItem().copy());
+                                     ItemStack item = new ItemStack(ModItems.SOUL.asItem(), 1);
+                                     item.set(ModDataComponents.SOUL_ENTITY_TYPE.get(), entity.getType());
+                                     return new RitualRecipe.OfferingHolder(entity, item);
+                                 }
+                         ).toList()
+            );
         }
-        return out;
+        return entitiesFound;
     }
 
-    public boolean accept(@NotNull RitualRecipe recipe) {
+    public boolean accept(@Nonnull RitualRecipe recipe) {
         return altar.getBlock().defaultBlockState() == recipe.altar()
-               && catalyst.is(recipe.catalyst().getItem())
+               && recipe.catalyst().test(catalyst)
                && (recipe.onTransmute() != ActionOnTransmute.DESTROY || catalyst.getDamageValue() == 0)
-               && catalyst.getCount() >= recipe.catalyst().getCount()
                && (!recipe.needSky() || level.canSeeSky(origin.above()))
                && (recipe.dimensions().isEmpty() || recipe.dimensions().stream().anyMatch(level.dimension()::equals))
-               && (recipe.biomes().isEmpty() || recipe.biomes().stream().anyMatch(level.getBiome(origin)::is));
+
+               && (recipe.biomes().size() == 0 || recipe.biomes().contains(level.getBiome(origin)));
     }
 
     public void consume() {
-        validatedInput.values().stream().flatMap(List::stream).forEach(EntityConsumer::consume);
+        entitiesFound.values().stream().flatMap(List::stream).forEach(holder -> holder.consume(player));
     }
 
     public void shrink(ActionOnTransmute action, int quantity) {
@@ -77,10 +84,6 @@ public final class RitualRecipeContext implements RecipeInput {
     private void damageOrShrink(int quantity) {
         if (catalyst.isDamageableItem()) catalyst.hurtAndBreak(quantity, player, LivingEntity.getSlotForHand(hand));
         else catalyst.shrink(quantity);
-    }
-
-    public void commit(HashMap<BlockPos, List<EntityConsumer>> entities) {
-        validatedInput.putAll(entities);
     }
 
     @Override
@@ -112,12 +115,10 @@ public final class RitualRecipeContext implements RecipeInput {
 
     public Player player() {return player;}
 
-    public HashMap<BlockPos, List<EntityConsumer>> validatedInput() {return validatedInput;}
-
     @Override
     public String toString() {
         return "RitualRecipeContext{" +
-               "validatedInput=" + validatedInput +
+               "validatedInput=" + entitiesFound +
                ", altar=" + altar +
                ", origin=" + origin +
                ", catalyst=" + catalyst +
